--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -41,7 +41,7 @@
         android:layout_height="196dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="45dp"
         android:background="@null"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,13 +55,11 @@
         style="@style/Widget.AppCompat.SeekBar"
         android:layout_width="195dp"
         android:layout_height="34dp"
-        android:layout_marginBottom="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:max="100"
         android:progress="50"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,23 +70,25 @@
         android:layout_width="378dp"
         android:layout_height="62dp"
         android:layout_marginBottom="40dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar">
 
         <Button
             android:id="@+id/button"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_marginBottom="96dp"
+            android:layout_marginBottom="120dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
             android:background="#364F6B"
             android:onClick="startQuiz"
-            android:text="スタート"
+            android:text="1人で遊ぶ"
             android:textAllCaps="false"
             android:textColor="@android:color/background_light"
             android:textStyle="bold" />
@@ -108,6 +108,22 @@
             android:textAllCaps="false"
             android:textColor="@android:color/background_light"
             android:visibility="gone" />
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/startAllButton"
+        android:layout_width="362dp"
+        android:layout_height="43dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="52dp"
+        android:background="#364F6B"
+        android:text="みんなで遊ぶ"
+        android:textColor="@android:color/background_light"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />
 
 </android.support.constraint.ConstraintLayout>
