--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -78,7 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/seekBar">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/startButton"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
@@ -129,22 +129,35 @@
 
     <Button
         android:id="@+id/read"
-        android:layout_width="59dp"
+        android:layout_width="68dp"
         android:layout_height="39dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="READ"
+        app:layout_constraintStart_toEndOf="@+id/toRankingButton"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/toRankingButton"
+        android:layout_width="149dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Button"
+        android:onClick="showRanking"
+        android:text="ランキングを表示"
         app:layout_constraintStart_toEndOf="@+id/create"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/delete"
-        android:layout_width="59dp"
-        android:layout_height="39dp"
+        android:layout_width="82dp"
+        android:layout_height="37dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Button"
-        app:layout_constraintStart_toEndOf="@+id/update"
+        android:layout_marginTop="16dp"
+        android:text="Delete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/read"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -154,6 +167,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Button"
+        android:visibility="gone"
         app:layout_constraintStart_toEndOf="@+id/read"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -164,19 +178,18 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Button"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/mTextView"
-        android:layout_width="135dp"
+        android:layout_width="399dp"
         android:layout_height="300dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="104dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/delete"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
