add speech mode

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -137,8 +137,7 @@
             android:id="@+id/speechTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:visibility="gone" />
+            android:text="あなたの回答" />
 
     </LinearLayout>
 
