--- a/app/src/main/res/layout/score.xml
+++ b/app/src/main/res/layout/score.xml
@@ -4,28 +4,52 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="101dp"
+        android:orientation="horizontal">
+
         <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@mipmap/ic_launcher" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:orientation="vertical">
+
+            <!--username-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="140dp"
+                    android:layout_height="160dp"
+                    android:layout_weight="1"
+                    android:text="usename"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/detail"
+                    android:layout_width="140dp"
+                    android:layout_height="160dp"
+                    android:layout_weight="1"
+                    android:text="score"
+                    android:textSize="30sp" />
+            </LinearLayout>
+
+            <!--score-->
 
             <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:id="@+id/date"
+                android:layout_width="280dp"
                 android:layout_height="0dp"
-                android:layout_weight="0.5"/>
-            <TextView
-                android:id="@+id/detail"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="0.5"/>
+                android:layout_weight="0.2"
+                android:text="今何時？" />
 
         </LinearLayout>
 
