--- a/app/src/main/res/layout/score.xml
+++ b/app/src/main/res/layout/score.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -18,7 +19,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!--username-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -42,13 +42,71 @@
                     android:textSize="30sp" />
             </LinearLayout>
 
-            <!--score-->
 
             <TextView
                 android:id="@+id/date"
                 android:layout_width="280dp"
                 android:layout_height="0dp"
                 android:layout_weight="0.2"
+                android:text="今何時？" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
+-->
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@mipmap/ic_launcher" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp"
+                    android:layout_weight="0.8"
+                    android:gravity="center"
+                    android:text="test"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp"
+                    android:layout_weight="0.8"
+                    android:gravity="center"
+                    android:text="test"
+                    android:textSize="40sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="280dp"
+                android:layout_height="20dp"
+                android:layout_weight="0.2"
+                android:gravity="right|center"
                 android:text="今何時？" />
 
         </LinearLayout>
