--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -33,6 +33,7 @@
         app:layout_constraintBottom_toTopOf="@+id/recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
@@ -43,12 +44,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jp.co.atschool.myquiz.ScoreActivity"
-    android:orientation="vertical">
+    android:background="#C8F4DE"
+    android:orientation="vertical"
+    tools:context="jp.co.atschool.myquiz.ScoreActivity">
+
+    <TextView
+        android:id="@+id/rankingTextView"
+        android:layout_width="match_parent"
+        android:layout_height="101dp"
+        android:gravity="center"
+        android:text="ランキング"
+        android:textSize="40sp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="435dp" />
 
 </LinearLayout>
