--- a/app/src/main/res/layout/score.xml
+++ b/app/src/main/res/layout/score.xml
@@ -58,8 +58,10 @@
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#C8F4DE"
+    android:orientation="vertical">
 
 
     <LinearLayout
@@ -84,16 +86,16 @@
 
                 <TextView
                     android:id="@+id/title"
-                    android:layout_width="wrap_content"
+                    android:layout_width="50dp"
                     android:layout_height="80dp"
                     android:layout_weight="0.8"
+                    android:autoSizeTextType="uniform"
                     android:gravity="center"
-                    android:text="test"
-                    android:textSize="30sp" />
+                    android:text="test" />
 
                 <TextView
                     android:id="@+id/detail"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="80dp"
                     android:layout_weight="0.8"
                     android:gravity="center"
