--- a/app/src/main/res/layout/score.xml
+++ b/app/src/main/res/layout/score.xml
@@ -70,6 +70,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/rankImageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@mipmap/ic_launcher" />
