--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -135,6 +135,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="READ"
+        android:visibility="gone"
         app:layout_constraintStart_toEndOf="@+id/toRankingButton"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -142,10 +143,13 @@
         android:id="@+id/toRankingButton"
         android:layout_width="149dp"
         android:layout_height="45dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:onClick="showRanking"
         android:text="ランキングを表示"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.084"
         app:layout_constraintStart_toEndOf="@+id/create"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -157,6 +161,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:text="Delete"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.548"
         app:layout_constraintStart_toStartOf="parent"
@@ -190,6 +195,7 @@
         android:layout_height="300dp"
         android:layout_marginTop="104dp"
         android:text="TextView"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -197,17 +203,20 @@
     <EditText
         android:id="@+id/nameText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:allowUndo="false"
         android:fitsSystemWindows="false"
         android:freezesText="false"
+        android:text="guest"
+        android:textColor="@color/colorPrimaryDark"
         android:textColorLink="@color/colorPrimaryDark"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.544"
         app:layout_constraintStart_toEndOf="@+id/read"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="username" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
