--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#364F6B</color>
-    <color name="colorPrimaryDark">#364f6b</color>
+    <color name="colorPrimaryDark">#031326</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
