--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C8F4DE"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     tools:context="jp.co.atschool.myquiz.MainActivity">
 
     <LinearLayout
