--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -107,7 +107,7 @@
             fancy:fb_borderWidth="1dp"
             fancy:fb_defaultColor="#7ab800"
             fancy:fb_focusColor="#9bd823"
-            fancy:fb_fontIconResource="&#xf04b;"
+            fancy:fb_fontIconResource="&#xf007;"
             fancy:fb_radius="30dp"
             fancy:fb_text="1人で遊ぶ"
             fancy:fb_textColor="#FFFFFF" />
@@ -137,12 +137,13 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
-            android:onClick="startQuiz"
+            android:onClick="startQuiz2"
+            android:visibility="gone"
             fancy:fb_borderColor="#FFFFFF"
             fancy:fb_borderWidth="1dp"
             fancy:fb_defaultColor="#E84545"
             fancy:fb_focusColor="#E84545"
-            fancy:fb_fontIconResource="&#xf04b;"
+            fancy:fb_fontIconResource="&#xf135;"
             fancy:fb_radius="30dp"
             fancy:fb_text="チャレンジ"
             fancy:fb_textColor="#FFFFFF" />
@@ -174,7 +175,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="#364F6B"
         android:onClick="startAllQuiz"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -184,9 +184,9 @@
         app:layout_constraintVertical_bias="0.573"
         fancy:fb_borderColor="#FFFFFF"
         fancy:fb_borderWidth="1dp"
-        fancy:fb_defaultColor="#364F6B"
-        fancy:fb_focusColor="#364F6B"
-        fancy:fb_fontIconResource="&#xf04b;"
+        fancy:fb_defaultColor="#7ab800"
+        fancy:fb_focusColor="#9bd823"
+        fancy:fb_fontIconResource="&#xf130;"
         fancy:fb_radius="30dp"
         fancy:fb_text="みんなで遊ぶ"
         fancy:fb_textColor="#FFFFFF" />
@@ -211,10 +211,33 @@
         android:layout_marginTop="16dp"
         android:onClick="showRanking"
         android:text="ランキングを表示"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.082"
         app:layout_constraintStart_toEndOf="@+id/create"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/rankingFancyButton"
+        android:layout_width="149dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:onClick="showRanking"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.082"
+        app:layout_constraintStart_toEndOf="@+id/create"
+        app:layout_constraintTop_toTopOf="parent"
+        fancy:fb_borderColor="#FFFFFF"
+        fancy:fb_borderWidth="1dp"
+        fancy:fb_defaultColor="#364F6B"
+        fancy:fb_focusColor="#6987ac"
+        fancy:fb_fontIconResource="&#xf1c0;"
+        fancy:fb_radius="10dp"
+        fancy:fb_text="ランキングを表示"
+        fancy:fb_textColor="#FFFFFF" />
+
 
     <Button
         android:id="@+id/delete"
@@ -266,20 +289,24 @@
 
     <EditText
         android:id="@+id/nameText"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:allowUndo="false"
         android:fitsSystemWindows="false"
         android:freezesText="false"
+        android:gravity="center"
+        android:inputType="textMultiLine"
+        android:maxLines="2"
+        android:minLines="1"
         android:text="guest"
         android:textColor="@color/colorPrimaryDark"
         android:textColorLink="@color/colorPrimaryDark"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.713"
+        app:layout_constraintHorizontal_bias="0.814"
         app:layout_constraintStart_toEndOf="@+id/read"
         app:layout_constraintTop_toTopOf="parent" />
 
