--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -52,6 +52,9 @@
         android:id="@+id/rankingTextView"
         android:layout_width="match_parent"
         android:layout_height="101dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         android:gravity="center"
         android:text="ランキング"
         android:textSize="40sp" />
@@ -59,6 +62,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="435dp" />
+        android:layout_height="503dp" />
 
 </LinearLayout>
