--- a/app/src/main/res/layout/score.xml
+++ b/app/src/main/res/layout/score.xml
@@ -89,8 +89,10 @@
                     android:id="@+id/title"
                     android:layout_width="50dp"
                     android:layout_height="80dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginTop="0dp"
                     android:layout_weight="0.8"
-                    android:autoSizeTextType="uniform"
+                    android:textSize="20dp"
                     android:gravity="center"
                     android:text="test" />
 
@@ -98,6 +100,9 @@
                     android:id="@+id/detail"
                     android:layout_width="100dp"
                     android:layout_height="80dp"
+                    android:layout_marginRight="0dp"
+
+                    android:layout_marginTop="0dp"
                     android:layout_weight="0.8"
                     android:gravity="center"
                     android:text="test"
